# rlftlbx

./: CMakeLists.txt  LICENSE  README.md
FORTtlbx/: AutoRegressive.f90  BIN_BDmerge.f90  BIN_BDsplit.f90  BIN_MATH.f90  BIN_MAT_TIME.f90  BIN_buildnorm.f90  BIN_operations.f90  BIN_swiss.f90  BINfiletools.f90  BLAS_custom.f90  EOP_tools.f90  FORTtime.f90  FORTtlbx.f90  GRACE2BIN.f90  GRACENORMtools.f90  GRACENORMtools_sun.f90  Groops2BIN.f90  GroopsFile.f90  NORM_fix_red.f90  NORM_tool.f90  REGEX.c  STREAMFILE.c  Sort.f90  Sort_various.c  ascii_2_BIN.f90  ctimeF.c  fit1D.f90  get_permvecC.c  interp1.f90  regexf.f90  statistics.f90  various.f90
GPStlbx/: BINfiletools.f90  GPS_XYZ_geo_trans.f90  GPS_calendar.f90  GPS_conv2old.f90  GPS_designmat.f90  GPS_discont_cumu.f90  GPS_freenet.f90  GPS_normeq.f90  GPS_obseq.f90  GPS_residual.f90  GPS_rotmat.f90  GPS_time.f90  GPStlbx.f90  SINEXtools.f90  SNX2BIN.f90  conv2itrf2000.f90  get_sinex.f90  get_sinexblock.f90  write_sinex.f90
GRDtlbx/: NC_write.f90  OBP_normeq.f90  OBP_obseq.f90  PSMSL_READ.f90  PSMSL_TOOL.f90  RADS_binner.f90  grdfilter2.c  grdtlbx.f90
SHtlbx/: BIN_2_JKmat.f90  GIA_func.f90  JKcov_2_BIN.f90  SHSELEN_xtract.f90  SH_2_nc.f90  SH_2_pnt.f90  SH_Love_d1_trans.f90  SH_SLEQ.f90  SH_axisload.f90  SH_basinav.f90  SH_createDDK.f90  SH_decormatSW.f90  SH_degvar.f90  SH_designmat.f90  SH_diagreg.f90  SH_dump.f90  SH_filter.f90  SH_fit.f90  SH_gaus.f90  SH_geocmod.f90  SH_gradMAT.f90  SH_loadGIA_uplift_ratio.f90  SH_loadlove.f90  SH_overlapint.f90  SH_prod2sum_mat.f90  SH_prod2sum_mat_openmp.f90  SH_read.f90  SH_readstandalone.f90  SH_sealevmat.f90  SH_synthesis.f90  SH_transmat.f90  SH_tripint.f90  SH_trpnt_mem.f90  SH_write.f90  SHiso_2_colat.f90  SHtlbx.f90  SHtlbx_sun.f90  c20_replace.f90  index.f90  nc_2_SH.f90  (+2 more)
auxscripts/: SH_APPSEQ  solveVCE
cmake/: FindFFTW3.cmake  FindNetCDF.cmake  FindNetCDFF.cmake  FindOPTBLAS.cmake  FindSHTOOLS.cmake
data/C1X_replace/: README.txt  SwensonCM-CF.txt  Swensondeg1.txt  get_SwensonWahrDeg1Corr.sh
data/C20_replace/: .gmtcommands4  .gmtdefaults4  C20_JIGOGRL02.txt  C20_JIGOGRL02.txt.bk  C20_TNries.txt  README.txt  TN-05_C20_SLR.txt  TN-07_C20_SLR.txt  conv_TNries  extractC20fromJIGOG  get_TN07_J2_corrections.sh  testC20  testC20JIGOG.txt  testC20Ries.txt
data/EOP/: .gmtcommands4  .gmtdefaults4  Auto_FTP_updater_EOP  EOPC01current  EOPcurrent  eopc01.iau2000.1846-now  eopc04.62-now  eopc04.dPsi_dEps.62-now  eopc04_08_IAU2000.62-now
data/EOP/EOPC01/: eopc01.iau2000.1846-now
data/EOP/EOPC04/: eopc04_08_IAU2000.62-now  eopc04_IAU2000.62-now
oldMakefilestuff/: Makefile  MakefileForttlbx  MakefileGPStlbx  MakefileGRDtlbx  MakefileSHtlbx  make.inc  make.inc_ariane  make.inc_f95_sunperf_intelarch  make.inc_f95_sunperf_sparc  make.inc_gfortran_acml  make.inc_gfortran_atlas  make.inc_grace  make.inc_ifort_MKL  make.inc_jerry  make.inc_tom
